# c--programming-program-design-including-data-structures

./: CMakeLists.txt
Ch2/: Exercises.md
Ch2/Examples/: Example2_1.cpp  Example2_13.cpp  Example2_17.cpp  Example2_18.cpp  Example2_22.cpp  Example2_29.cpp  Example2_30.cpp  Example2_4.cpp  Example2_4_Modified.cpp  Example2_5.cpp  Example2_8.cpp  Example2_9.cpp
Ch2/Programming_Examples/: Convert_Measurements.cpp  Make_Change.cpp
Ch2/Programming_Exercises/: Programming_Exercise2_1  Programming_Exercise2_1.cpp  Programming_Exercise2_10.cpp  Programming_Exercise2_11.cpp  Programming_Exercise2_12.cpp  Programming_Exercise2_13.cpp  Programming_Exercise2_14  Programming_Exercise2_14.cpp  Programming_Exercise2_15.cpp  Programming_Exercise2_16.cpp  Programming_Exercise2_17.cpp  Programming_Exercise2_18  Programming_Exercise2_18.cpp  Programming_Exercise2_19.cpp  Programming_Exercise2_2.cpp  Programming_Exercise2_20.cpp  Programming_Exercise2_21.cpp  Programming_Exercise2_22.cpp  Programming_Exercise2_23.cpp  Programming_Exercise2_24.cpp  Programming_Exercise2_25.cpp  Programming_Exercise2_26.cpp  Programming_Exercise2_27.cpp  Programming_Exercise2_28.cpp  Programming_Exercise2_29.cpp  Programming_Exercise2_3.cpp  Programming_Exercise2_4.cpp  Programming_Exercise2_5.cpp  Programming_Exercise2_6.cpp  Programming_Exercise2_7.cpp  Programming_Exercise2_8.cpp  Programming_Exercise2_9.cpp
Ch3/: Exercises.md
Ch3/Examples/: Example3_10.cpp  Example3_11.cpp  Example3_12.cpp  Example3_13.cpp  Example3_14.cpp  Example3_15.cpp  Example3_4.cpp  Example3_7.cpp  Example3_8.cpp  Example3_9.cpp
Ch3/Programming_Examples/: Average_Test_Score.cpp  Movie_Tickets_Sale.cpp
Ch3/Programming_Exercises/: Programming_Exercise3_1.cpp  Programming_Exercise3_10.cpp  Programming_Exercise3_11.cpp  Programming_Exercise3_12.cpp  Programming_Exercise3_2.cpp  Programming_Exercise3_3.cpp  Programming_Exercise3_4.cpp  Programming_Exercise3_5.cpp  Programming_Exercise3_6.cpp  Programming_Exercise3_7.cpp  Programming_Exercise3_8.cpp  Programming_Exercise3_9.cpp
Ch4/: Exercises.md
Ch4/Examples/: Example4_7.cpp
Ch4/Programming_Examples/: Cable_Company_Billing.cpp
Ch4/Programming_Exercises/: Ch4_Ex15_Data.txt  Programming_Exercise4_1.cpp  Programming_Exercise4_10.cpp  Programming_Exercise4_11.cpp  Programming_Exercise4_12.cpp  Programming_Exercise4_13.cpp  Programming_Exercise4_14.cpp  Programming_Exercise4_15.cpp  Programming_Exercise4_16.cpp  Programming_Exercise4_17.cpp  Programming_Exercise4_18.cpp  Programming_Exercise4_19.cpp  Programming_Exercise4_2.cpp  Programming_Exercise4_20.cpp  Programming_Exercise4_21.cpp  Programming_Exercise4_22.cpp  Programming_Exercise4_23.cpp  Programming_Exercise4_3.cpp  Programming_Exercise4_4.cpp  Programming_Exercise4_5.cpp  Programming_Exercise4_6.cpp  Programming_Exercise4_7.cpp  Programming_Exercise4_8.cpp  Programming_Exercise4_9.cpp
Ch5/: Exercises.md
Ch5/Examples/: Example5_17.cpp  Example5_20.cpp  Example5_3.cpp  Example5_4.cpp  Example5_5.cpp  Example5_6.cpp  Example5_7.cpp  Example5_8.cpp
Ch5/Programming_Examples/: Counts_zeros_odds_and_evens.cpp  nth_Fibonacci_Number.cpp
Ch5/Programming_Exercises/: Ch5_cookie_Data.txt  Programming_Exercise5_1.cpp  Programming_Exercise5_10.cpp  Programming_Exercise5_11.cpp  Programming_Exercise5_12.cpp  Programming_Exercise5_13.cpp  Programming_Exercise5_14.cpp  Programming_Exercise5_15.cpp  Programming_Exercise5_16.cpp  Programming_Exercise5_17.cpp  Programming_Exercise5_18.cpp  Programming_Exercise5_19.cpp  Programming_Exercise5_2.cpp  Programming_Exercise5_20.cpp  Programming_Exercise5_21.cpp  Programming_Exercise5_22.cpp  Programming_Exercise5_23.cpp  Programming_Exercise5_24.cpp  Programming_Exercise5_25.cpp  Programming_Exercise5_26.cpp  Programming_Exercise5_27.cpp  Programming_Exercise5_28.cpp  Programming_Exercise5_29.cpp  Programming_Exercise5_3.cpp  Programming_Exercise5_30.cpp  Programming_Exercise5_31.cpp  Programming_Exercise5_32.cpp  Programming_Exercise5_33.cpp  Programming_Exercise5_4.cpp  Programming_Exercise5_5.cpp  Programming_Exercise5_6.cpp  Programming_Exercise5_7.cpp  Programming_Exercise5_8.cpp  Programming_Exercise5_9.cpp
Ch6/: Exercises.md
Ch6/Examples/: Example6_1.cpp  Example6_10.cpp  Example6_11.cpp  Example6_12.cpp  Example6_13.cpp  Example6_14.cpp  Example6_15.cpp  Example6_16.cpp  Example6_17.cpp  Example6_18.cpp  Example6_19.cpp  Example6_2.cpp  Example6_3.cpp  Example6_4.cpp  Example6_5.cpp  Example6_6.cpp  Example6_7.cpp
Ch6/Programming_Examples/: Classify_Numbers.cpp  Comparison_of_Class_Averages.cpp  Largest_Number.cpp
Ch6/Programming_Exercises/: Programming_Exercise6_1.cpp  Programming_Exercise6_10.cpp  Programming_Exercise6_11.cpp  Programming_Exercise6_12.cpp  Programming_Exercise6_13.cpp  Programming_Exercise6_14.cpp  Programming_Exercise6_15.cpp  Programming_Exercise6_16.cpp  Programming_Exercise6_17.cpp  Programming_Exercise6_18.cpp  Programming_Exercise6_19.cpp  Programming_Exercise6_2.cpp  Programming_Exercise6_20.cpp  Programming_Exercise6_21.cpp  Programming_Exercise6_22.cpp  Programming_Exercise6_23.cpp  Programming_Exercise6_24.cpp  Programming_Exercise6_25.cpp  Programming_Exercise6_26.cpp  Programming_Exercise6_27.cpp  Programming_Exercise6_28.cpp  Programming_Exercise6_29.cpp  Programming_Exercise6_3.cpp  Programming_Exercise6_30.cpp  Programming_Exercise6_31.cpp  Programming_Exercise6_32.cpp  Programming_Exercise6_33.cpp  Programming_Exercise6_4.cpp  Programming_Exercise6_5.cpp  Programming_Exercise6_6.cpp  Programming_Exercise6_7.cpp  Programming_Exercise6_8.cpp  Programming_Exercise6_9.cpp  numbers.txt
Ch7/: Exercises.md
Ch7/Examples/: Example7_13.cpp  Example7_14.cpp  Example7_15.cpp  Example7_16.cpp  Example7_17.cpp
Ch7/Programming_Examples/: Pig_Latin_Strings.cpp  Rock_Paper_Scissors.cpp
Ch7/Programming_Exercises/: Programming_Exercise7_1.cpp  Programming_Exercise7_10.cpp  Programming_Exercise7_11.cpp  Programming_Exercise7_2.cpp  Programming_Exercise7_3.cpp  Programming_Exercise7_4.cpp  Programming_Exercise7_5.cpp  names.txt  (+4 more)
Ch8/: Exercises.md
(+12 files in other folders)
