cmake_minimum_required(VERSION 4.0)
project(c___programming_program_design_including_data_structures)

set(CMAKE_CXX_STANDARD 14)

# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_1.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_4.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_4_Modified.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_5.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_8.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_9.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_13.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_17.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_18.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_22.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_29.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Examples/Example2_30.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Examples/Convert_Measurements.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Examples/Make_Change.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_1.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_2.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_3.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_4.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_5.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_6.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_7.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_8.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_9.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_10.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_11.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_12.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_13.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_14.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_15.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_16.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_17.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_18.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_19.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_20.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_21.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_22.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_23.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_24.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_25.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_26.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_27.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_28.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch2/Programming_Exercises/Programming_Exercise2_29.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_4.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_7.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_8.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_9.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_10.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_11.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_12.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_13.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_14.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Examples/Example3_15.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Examples/Movie_Tickets_Sale.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Examples/Average_Test_Score.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_1.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_2.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_3.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_4.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_5.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_6.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_8.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_8.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_9.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_10.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_12.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch3/Programming_Exercises/Programming_Exercise3_12.cpp)
# add_executable(c___programming_program_design_including_data_structures ch4/Examples/Example4_3.cpp)
# add_executable(c___programming_program_design_including_data_structures ch4/Examples/Example4_7.cpp)
# add_executable(c___programming_program_design_including_data_structures ch4/Examples/Example4_14.cpp)
# add_executable(c___programming_program_design_including_data_structures ch4/Programming_Examples/Average_Test_Score.cpp)
# add_executable(c___programming_program_design_including_data_structures ch4/Examples/Example4_23.cpp)
# add_executable(c___programming_program_design_including_data_structures ch4/Programming_Examples/Cable_Company_Billing.cpp)
# add_executable(c___programming_program_design_including_data_structures ch4/Programming_Exercises/Programming_Exercise4_1.cpp)
# add_executable(c___programming_program_design_including_data_structures ch4/Programming_Exercises/Programming_Exercise4_2.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_3.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_4.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_5.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_6.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_7.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_8.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_9.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_10.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_11.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_12.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_13.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_14.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_15.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_16.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_17.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_18.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_19.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_20.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_21.cpp)
# add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_22.cpp)
add_executable(c___programming_program_design_including_data_structures Ch4/Programming_Exercises/Programming_Exercise4_23.cpp)